# discord-dnd-bot

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
dnd-bot/: main.py  requirements.txt  setup.cfg
dnd-bot/dnd_bot/: main.py
dnd-bot/dnd_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dnd-bot/dnd_bot/assets/campaigns/: campaign.json
dnd-bot/dnd_bot/assets/maps/: map.json
dnd-bot/dnd_bot/database/: database_connection.py  database_creature.py  database_creature_item.py  database_dialog.py  database_entity.py  database_enums.py  database_equipment.py  database_event.py  database_game.py  database_interface.py  database_item.py  database_multiverse.py  database_player.py  database_player_item.py  database_skill.py  database_startup_load.py  database_user.py  test.py
dnd-bot/dnd_bot/database/utils/: database_initialization.py  database_initialize_tables.py  db_manage.py
dnd-bot/dnd_bot/dc/: init.py
dnd-bot/dnd_bot/dc/cogs/: command_create.py  command_join.py  command_latency.py  command_pause.py  command_resume.py  command_shutdown.py  command_start.py  command_tmp_game_view.py  hello.py  test.py
dnd-bot/dnd_bot/tests/: autoconf.py  create_tables.sql  manual_testing_queries.sql  populate_tables.sql  test_database_creature.py  test_database_dialog.py  test_database_entity.py  test_database_equipment.py  test_database_event.py  test_database_game.py  test_database_item.py  test_database_player.py  test_database_player_item.py  test_database_skill.py  test_database_user.py  test_game.py  test_player.py
(+100 files in other folders)
