[metadata]
name = dnd_bot
version = 0.0.1
description = D&D bot
long_description = Dungeons & Dragons game master bot for discord
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = false
packages = find:
install_requires =
    discord

[options.package_data]
dnd_bot.assets.gfx = *.png *.jpg *.gif
dnd_bot.assets.audio = *.wav, *.ogg

[options.entry_points]
# Optional, but if you want to keep it,
# make sure you have a function called
# main() in tower.main!
console_scripts =
    dnd_bot = dnd_bot.main:main